--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style2.css" type="text/css">    
@@ -95,7 +96,7 @@
         <div class="csd csd1">
             <h3> Travel Planning Application Development </h3>
             <p> From research into the development of a travel planning app, named VacayVibes.</p>
-            <p> View case study <img src="images/Icons/white arrow.svg"></p>
+            <p class="hoverCS"> View case study <img src="images/Icons/white arrow.svg"></p>
         </div>
     </div>
 
@@ -105,7 +106,7 @@
         <div class="csd csd2">
             <h3> ABC (Australian Broadcasting Centre) Website Re-Design </h3>
             <p> Revamping the ABC Website, which include ABC News, ABC Listen, ABC TV, and more.</p>
-            <p> View case study <img src="images/Icons/white arrow.svg"></p>
+            <p class="hoverCS"> View case study <img src="images/Icons/white arrow.svg"></p>
         </div>
 
         <div class="csi csi2">
@@ -118,7 +119,7 @@
         <div class="csd csd3">
             <h3> Mental Health Website Re-Design </h3>
             <p> Revamping LivesLivedWell website, a non profit organisation that helps people with any mental health concern. </p>
-            <p> View case study <img src="images/Icons/white arrow.svg"></p>
+            <p class="hoverCS"> View case study <img src="images/Icons/white arrow.svg"></p>
         </div>
         <div class="csi csi3">
             <img src="images/projects/LivesLivedWell.png">
@@ -129,7 +130,7 @@
     </div>
 
     <div class="viewAll">
-        <h3>View All Projects
+        <h3 id="hoverAllprojects">View All Projects
             <img src="images/Icons/black arrow.svg">
         </h3>
     </div>
@@ -224,4 +225,7 @@
     </div>
 
 </footer>
+
+<script src="js/index.js"></script>
+
 </html> 
