latest version of portfolio

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style2.css" type="text/css">    
@@ -142,7 +141,7 @@
 
     <!-- <div class="gridfour"> -->
         <div class="myskillsBar">
-            <h2> What My Design Skills Included?</h2>
+            <h2> What My Design Skills Include?</h2>
             <div class="barwidth"> <h4 class="floatleft"> Figma </h4> 
                 <h4 class="floatright"> 95% </h4> 
                 <div id="progressBar"> 
@@ -225,7 +224,7 @@
     </div>
 
 </footer>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="js/index.js"></script>
 
 </html> 
