--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
         </div>
         <!-- Case study 1 -->
         <div class="csi csi1">
-            <img src="images/projects/VacayVibes.png">
+            <img src="images/project image without backrgound/vacayvibes 1.png">
         </div>
         <div class="csd csd1">
             <h3> Travel Planning Application Development </h3>
             <p> From research into the development of a travel planning app, named VacayVibes.</p>
-            <p class="hoverCS"> View case study <img src="images/Icons/white arrow.svg"></p>
+            <p class="hoverCS"> View case study <img class="arrow" src="images/Icons/yellow arrow.svg"></p>
         </div>
     </div>
 
@@ -105,11 +105,11 @@
         <div class="csd csd2">
             <h3> ABC (Australian Broadcasting Centre) Website Re-Design </h3>
             <p> Revamping the ABC Website, which include ABC News, ABC Listen, ABC TV, and more.</p>
-            <p class="hoverCS"> View case study <img src="images/Icons/white arrow.svg"></p>
+            <p class="hoverCS"> View case study <img class="arrow" src="images/Icons/yellow arrow.svg"></p>
         </div>
 
         <div class="csi csi2">
-            <img src="images/projects/ABC case study.png">
+            <img src="images/project image without backrgound/ABC website.png">
         </div>
     </div>
 
@@ -118,10 +118,10 @@
         <div class="csd csd3">
             <h3> Mental Health Website Re-Design </h3>
             <p> Revamping LivesLivedWell website, a non profit organisation that helps people with any mental health concern. </p>
-            <p class="hoverCS"> View case study <img src="images/Icons/white arrow.svg"></p>
+            <p class="hoverCS"> View case study <img class="arrow" src="images/Icons/yellow arrow.svg"></p>
         </div>
         <div class="csi csi3">
-            <img src="images/projects/LivesLivedWell.png">
+            <img src="images/project image without backrgound/lives lived well desktop.png">
         </div>
         <div class="csi csi3b">
             <img src="images/projects/LivesLivedWell 2nd image.svg">
