changing view case study

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="csd csd1">
             <h3> Travel Planning Application Development </h3>
-            <p> From research into the development of a travel planning app, named VacayVibes.</p>
+            <p class="p"> From research into the development of a travel planning app, named VacayVibes.</p>
             <p class="hoverCS"> View case study <img class="arrow" src="images/Icons/yellow arrow.svg"></p>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <!-- Case study 2 -->    
         <div class="csd csd2">
             <h3> ABC (Australian Broadcasting Centre) Website Re-Design </h3>
-            <p> Revamping the ABC Website, which include ABC News, ABC Listen, ABC TV, and more.</p>
+            <p class="p"> Revamping the ABC Website, which include ABC News, ABC Listen, ABC TV, and more.</p>
             <p class="hoverCS"> View case study <img class="arrow" src="images/Icons/yellow arrow.svg"></p>
         </div>
 
@@ -117,7 +117,7 @@
     <!-- Case study 3 --> 
         <div class="csd csd3">
             <h3> Mental Health Website Re-Design </h3>
-            <p> Revamping LivesLivedWell website, a non profit organisation that helps people with any mental health concern. </p>
+            <p class="p"> Revamping LivesLivedWell website, a non profit organisation that helps people with any mental health concern. </p>
             <p class="hoverCS"> View case study <img class="arrow" src="images/Icons/yellow arrow.svg"></p>
         </div>
         <div class="csi csi3">
